--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
         <activity android:name=".MainActivity">
 
         </activity>
@@ -24,6 +25,7 @@
         </activity>
 
         <activity android:name=".activity.RegisterActivity"></activity>
+        <activity android:name=".activity.NoteActivity"/>
 
     </application>
 
